--- a/style.css
+++ b/style.css
@@ -88,10 +88,10 @@ li {
 
 a {
     text-decoration: none;
-    color: #333; /* Change link color */
-    transition: color 0.3s; /* Add a smooth color transition effect */
+    color: #333; 
+    transition: color 0.3s;
 }
 
 a:hover {
-    color: #555; /* Change link color on hover */
+    color: lightcoral; /* Change link color on hover */
 }
